// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideNavbarItem render testing renders panel and takes snapshot to track jsx element changes, will also test for exceptions in element code 1`] = `
<SideNavbarToggle>
  <a
    className="  btn btn-primary"
    href="#"
    id="side-navbar-toggle"
    onClick={[Function]}
  >
    <i
      className="fa fa-bars fa-lg"
    />
  </a>
</SideNavbarToggle>
`;

exports[`SideNavbarToggle functionality testing checks that the toggle function is working correctly 1`] = `
<SideNavbarToggle>
  <a
    className="  btn btn-primary"
    href="#"
    id="side-navbar-toggle"
    onClick={[Function]}
  >
    <i
      className="fa fa-bars fa-lg"
    />
  </a>
</SideNavbarToggle>
`;

exports[`SideNavbarToggle render testing renders panel and takes snapshot to track jsx element changes, will also test for exceptions in element code 1`] = `
<a
  className="  btn btn-primary"
  href="#"
  id="side-navbar-toggle"
  onClick={[Function]}
>
  <i
    className="fa fa-bars fa-lg"
  />
</a>
`;
